[package]
name = "unicornafl"
version = "0.9.0"
authors = ["Dominik Maier<domenukk@gmail.com>"]
documentation = "https://docs.rs/unicorn/"
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/domenukk/unicorn"
description = "Rust bindings for the unicorn emulator, AFL edition - based on unicorn-rs"

[dependencies]
bitflags = "1.0"
libc = "0.2"
libunicorn-sys = { path = "libunicorn-sys", version = "0.9.0" }
